samples/_failures_safe/1761182434_2b46ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07f8d98a.c: In function ‘main’:
./samples/SAFE/__tmp_07f8d98a.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_07f8d98a.c:160:5: error: expected declaration or statement at end of input
  160 |     if
      |     ^~
